--- a/MvcCv/Views/Default/Experience.cshtml
+++ b/MvcCv/Views/Default/Experience.cshtml
@@ -8,7 +8,7 @@
             <div class="flex-grow-1">
                 <h3 class="mb-0">@x.Title</h3>
                 <div class="subheading mb-3">@x.SubTitle</div>
-                <p>@x.Descrption</p>
+                <p>@x.Description</p>
             </div>
             <div class="flex-shrink-0"><span class="text-primary">@x.Date</span></div>
         </div>
