--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -59,7 +59,6 @@
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
                                     Hakkımda
-                                    <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
                         </li>
@@ -68,17 +67,14 @@
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Eğitimlerim
-                                    <span class="right badge badge-danger">New</span>
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
+                            <a href="/Experience/" class="nav-link">
                                 <i class="nav-icon fas fa-copy"></i>
                                 <p>
                                     Deneyimlerim
-                                    <i class="fas fa-angle-left right"></i>
-                                    <span class="badge badge-info right">6</span>
                                 </p>
                             </a>
                         </li>
@@ -87,7 +83,6 @@
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
                                     Hobilerim
-                                    <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
                         </li>
@@ -96,7 +91,6 @@
                                 <i class="nav-icon far fa-calendar-alt"></i>
                                 <p>
                                     Yeteneklerim
-                                    <span class="badge badge-info right">2</span>
                                 </p>
                             </a>
                         </li>
