--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -71,7 +71,7 @@
                             </a>
                         </li>
                         <li class="nav-item has-treeview">
-                            <a href="/Experience/" class="nav-link">
+                            <a href="/Experience/Index" class="nav-link">
                                 <i class="nav-icon fas fa-copy"></i>
                                 <p>
                                     Deneyimlerim
