--- a/MvcCv/Views/Default/Talent.cshtml
+++ b/MvcCv/Views/Default/Talent.cshtml
@@ -24,7 +24,7 @@
         {
         <li>
             <span class="fa-li"><i class="fas fa-check"></i></span>
-            @x.Talent1
+            @x.TalentName
         </li>
         }
     </ul>
