--- a/MvcCv/Views/Talent/Index.cshtml
+++ b/MvcCv/Views/Talent/Index.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
+@{ string color = "";}
+@{ string labelColor = "";}
 <!DOCTYPE html>
 <html>
 <body class="hold-transition sidebar-mini">
@@ -31,15 +32,35 @@
                                     <tbody>
                                         @foreach (var x in Model)
                                         {
+                                            if (x.TalentPercent >= 0 && x.TalentPercent <= 50)
+                                            {
+                                                color = "progress-bar bg-danger";
+                                                labelColor = "badge bg-danger";
+                                            }
+                                            if (x.TalentPercent > 50 && x.TalentPercent <= 70)
+                                            {
+                                                color = "progress-bar bg-warning";
+                                                labelColor = "badge bg-warning";
+                                            }
+                                            if (x.TalentPercent > 70 && x.TalentPercent <= 84)
+                                            {
+                                                color = "progress-bar bg-primary";
+                                                labelColor = "badge bg-primary";
+                                            }
+                                            if (x.TalentPercent >= 85 && x.TalentPercent <= 100)
+                                            {
+                                                color = "progress-bar bg-success";
+                                                labelColor = "badge bg-success";
+                                            }
                                             <tr>
                                                 <td>@x.ID</td>
                                                 <td>@x.TalentName</td>
                                                 <td>
                                                     <div class="progress progress-xs">
-                                                        <div class="progress-bar progress-bar-danger" style="width: @x.TalentPercent%"></div>
+                                                        <div class="@color" style="width: @x.TalentPercent%"></div>
                                                     </div>
                                                 </td>
-                                                <td><span class="badge bg-fuchsia">@x.TalentPercent%</span></td>
+                                                <td><span class="@labelColor">@x.TalentPercent%</span></td>
                                             </tr>
                                         }
                                     </tbody>
