--- a/MvcCv/Views/Talent/Index.cshtml
+++ b/MvcCv/Views/Talent/Index.cshtml
@@ -20,13 +20,17 @@
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
+                                <a href="/Talent/AddTalent" class="btn btn-info">Yeni Yetenek Ekle</a>
+                                <br />
+                                <br />
                                 <table class="table table-bordered">
                                     <thead>
                                         <tr>
                                             <th style="width: 10px">#</th>
                                             <th>Yetenek</th>
-                                            <th>Doluluk</th>
-                                            <th style="width: 40px">Yüzde</th>
+                                            <th>Derece</th>
+                                            <th style="width: 40px">Oran</th>
+                                            <th>İşlemler</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -61,6 +65,16 @@
                                                     </div>
                                                 </td>
                                                 <td><span class="@labelColor">@x.TalentPercent%</span></td>
+                                                <td>
+                                                    <a href="/Talent/Remove/@x.ID" class="btn btn-danger btn-sm">
+                                                        <i class="fas fa-trash">
+                                                        </i> Sil
+                                                    </a>
+                                                    <a href="/Talent/Edit/@x.ID" class="btn btn-info btn-sm">
+                                                        <i class="fas fa-pencil-alt">
+                                                        </i> Düzenle
+                                                    </a>
+                                                </td>
                                             </tr>
                                         }
                                     </tbody>
