titles was named

--- a/MvcCv/Views/Experience/AddExperience.cshtml
+++ b/MvcCv/Views/Experience/AddExperience.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "AddExperience";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<title>Yeni Deneyim Ekleme</title>
 <br />
 <h3>Yeni Deneyim Ekleme Sayfası</h3>
 <br />
