--- a/MvcCv/Views/Experience/GetExperience.cshtml
+++ b/MvcCv/Views/Experience/GetExperience.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "GetExperience";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<title>Deneyim Düzenleme</title>
 <br />
 <h3>Deneyim Güncelleme Sayfası</h3>
 @using (Html.BeginForm("Edit", "Experience", FormMethod.Post))
