--- a/MvcCv/Views/Experience/Index.cshtml
+++ b/MvcCv/Views/Experience/Index.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<title>Deneyimler</title>
 <br />
 <h2>Deneyim Listesi</h2>
 <table class="table table-bordered">
