--- a/MvcCv/Views/Talent/AddTalent.cshtml
+++ b/MvcCv/Views/Talent/AddTalent.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "AddTalent";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<title>Yeni Yetenek Ekleme</title>
 <h2>Yeni Yetenek Ekleme Sayfası</h2>
 <form method="post">
     <input type="text" class="form-control" name="TalentName" placeholder="Yetenek" required />
