--- a/MvcCv/Views/Talent/Edit.cshtml
+++ b/MvcCv/Views/Talent/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
+<title>Yetenek Bilgisi Güncelleme</title>
 <h2>Yetenek Bilgisi Güncelleme</h2>
 <br />
 <form method="post">
