--- a/MvcCv/Views/Talent/Index.cshtml
+++ b/MvcCv/Views/Talent/Index.cshtml
@@ -6,6 +6,7 @@
 }
 @{ string color = "";}
 @{ string labelColor = "";}
+<title>Yetenekler</title>
 <!DOCTYPE html>
 <html>
 <body class="hold-transition sidebar-mini">
