Certificates was designed

--- a/MvcCv/Views/Default/Certificates.cshtml
+++ b/MvcCv/Views/Default/Certificates.cshtml
@@ -7,7 +7,7 @@
         {
             <li>
                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                @x.Description
+                @x.Description - @x.Date
             </li>
         }
     </ul>
