--- a/MvcCv/Views/Certificate/Index.cshtml
+++ b/MvcCv/Views/Certificate/Index.cshtml
@@ -1,9 +1,11 @@
-﻿
+﻿@using MvcCv.Models.Entity
+@model List<Award>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
+@{ string color = ""; }
+<title>Sertifikalar</title>
 <!DOCTYPE html>
 <html>
 <body class="hold-transition sidebar-mini">
@@ -15,38 +17,52 @@
                         <div class="card-header p-2">
                         </div><!-- /.card-header -->
                         <div class="card-body">
-                                <!-- /.tab-pane -->
-                                <div class="tab-pane" id="timeline">
-                                    <!-- The timeline -->
-                                    <div class="timeline timeline-inverse">
-                                        <!-- timeline time label -->
+                            <!-- /.tab-pane -->
+                            <div class="tab-pane" id="timeline">
+                                <!-- The timeline -->
+                                <div class="timeline timeline-inverse">
+                                    <!-- timeline time label -->
+                                    @foreach (var x in Model)
+                                    {
+                                        {
+                                            if (x.ID % 2 == 1)
+                                            {
+                                                color = "btn btn-success";
+                                            }
+                                            else
+                                            {
+                                                color = "btn btn-info";
+                                            }
+                                        }
                                         <div class="time-label">
-                                            <span class="bg-success">
-                                                10 Feb. 2014
+                                            <span>
+                                                <a class="@color" href="/Certificate/Edit/@x.ID">@x.Date</a>
                                             </span>
                                         </div>
                                         <div>
-                                            <i class="fas fa-comment bg-primary"></i>
+                                            @*<i class="fas fa-comment bg-primary"></i>*@
                                             <div class="timeline-item">
                                                 <div class="timeline-body">
-                                                    Burası Açıklama
+                                                    @x.Description
                                                 </div>
-                                                <div class="timeline-footer">
-                                                    <a href="#" class="btn btn-primary btn-sm">Düzenle</a>
-                                                    <a href="#" class="btn btn-danger btn-sm">Sil</a>
-                                                </div>
+                                                @*<div class="timeline-footer">
+                                                        <a href="#" class="btn btn-primary btn-sm">Düzenle</a>
+                                                        <a href="#" class="btn btn-danger btn-sm">Sil</a>
+                                                    </div>*@
                                             </div>
                                         </div>
-                                    </div>
+                                    }
                                 </div>
+                                <a href="/Certificate/AddCertificate" class="btn btn-primary">Sertifika Ekle</a>
                             </div>
                         </div>
                     </div>
-                    <!-- /.nav-tabs-custom -->
                 </div>
-                <!-- /.col -->
+                <!-- /.nav-tabs-custom -->
             </div>
-            <!-- /.row -->
+            <!-- /.col -->
+        </div>
+        <!-- /.row -->
     </section>
 </body>
 </html>
