--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -102,8 +102,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../gallery.html" class="nav-link">
-                                <i class="nav-icon far fa-image"></i>
+                            <a href="/Contact/Index" class="nav-link">
+                                <i class="nav-icon far fa-map"></i>
                                 <p>
                                     İletişim
                                 </p>
