--- a/MvcCv/Views/About/Index.cshtml
+++ b/MvcCv/Views/About/Index.cshtml
@@ -1,24 +1,38 @@
-﻿
+﻿@using MvcCv.Models.Entity
+@model List<About>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
-<h2>Hakkımda Menüsü</h2>
-<table class="table table-bordered">
-    <tr>
-        <th>ID</th>
-        <th>Ad</th>
-        <th>Şehir</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>Murat</td>
-        <td>Adana</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Murat</td>
-        <td>Adana</td>
-    </tr>
-</table>
+<title>Hakkımda</title>
+<br />
+<h2>Hakkımda Düzenleme Sayfası</h2>
+<br />
+<form method="post">
+    @foreach (var x in Model)
+    {
+        <input type="hidden" name="ID" value="@x.ID" readonly />
+        <label>Ad</label>
+        <input type="text" class="form-control" name="Name" value="@x.Name" />
+        <br />
+        <label>Soyad</label>
+        <input type="text" class="form-control" name="Surname" value="@x.Surname" />
+        <br />
+        <label>Adres</label>
+        <input type="text" class="form-control" name="Address" value="@x.Address" />
+        <br />
+        <label>Telefon</label>
+        <input type="tel" class="form-control" name="Phone" value="@x.Phone" />
+        <br />
+        <label>E-Posta</label>
+        <input type="email" class="form-control" name="Mail" value="@x.Mail" />
+        <br />
+        <label>Açıklama</label>
+        <textarea type="text" rows="5" class="form-control" name="Description">@x.Description</textarea>
+        <br />
+        <label>Fotoğraf</label>
+        <input type="text" class="form-control" name="Image" value="@x.Image" />
+    }
+    <br />
+    <button class="btn btn-success">Güncelle</button>
+</form>
