Social Media Partial

--- a/MvcCv/Views/Default/Index.cshtml
+++ b/MvcCv/Views/Default/Index.cshtml
@@ -60,10 +60,7 @@
                         <a href="@x.Mail">@x.Mail</a>
                     </div>
                     <p class="lead mb-5">@x.Description</p>
-                    <div class="social-icons">
-                        <a class="social-icon" href="https://linkedin.com/in/aliyilmaz20"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/aliyilmaz020"><i class="fab fa-github"></i></a>
-                    </div>
+                    @Html.Action("SocialMedia")
                 </div>
             </section>
         }
