--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -52,7 +52,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-                        with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                         <li class="nav-item has-treeview">
                             <a href="/About/Index" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -109,6 +109,15 @@
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="/SocialMedia/Index" class="nav-link">
+                                <i class="nav-icon far fa-address-book"></i>
+                                <p>
+                                    Sosyal Medyalarım
+                                </p>
+                            </a>
+                        </li>
+
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
