--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -117,7 +117,14 @@
                                 </p>
                             </a>
                         </li>
-
+                        <li class="nav-item">
+                            <a href="/Login/LogOut" class="nav-link">
+                                <i class="nav-icon far fa-bell"></i>
+                                <p>
+                                    Çıkış Yap
+                                </p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
