--- a/MvcCv/Views/Login/Index.cshtml
+++ b/MvcCv/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model MvcCv.Models.Entity.Admin
 @{
     Layout = null;
 }
@@ -28,11 +28,9 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="login-wrap p-0">
                         <h3 class="mb-4 text-center">Bir Hesabın Var Mı?</h3>
-
-
                         <form method="post" class="signin-form">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Kullanıcı Adınız" name="UserName" required>
+                                <input type="text" class="form-control" placeholder="Kullanıcı Adınız" name="Username" required>
                             </div>
                             <div class="form-group">
                                 <input id="password-field" type="password" class="form-control" placeholder="Şifreniz" name="Password" required>
@@ -49,10 +47,8 @@
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
-
                             </div>
                         </form>
-
                     </div>
                 </div>
             </div>
