--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -44,7 +44,7 @@
                         <img src="~/webadmin/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                        <a href="/Admin/Index" class="d-block">Admin İşlemleri</a>
                     </div>
                 </div>
 
@@ -114,6 +114,14 @@
                                 <i class="nav-icon far fa-address-book"></i>
                                 <p>
                                     Sosyal Medyalarım
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/Admin/Index" class="nav-link">
+                                <i class="nav-icon fas fa-pen"></i>
+                                <p>
+                                    Ayarlar
                                 </p>
                             </a>
                         </li>
